--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "author": "Jędrzej Karolonek <jkarolonek@n-educatio.pl>",
   "license": "MIT",
-  "repo": "https://github.com/jkarolonek-neducatio/minesweeper",
+  "repository": "https://github.com/jkarolonek-neducatio/minesweeper",
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
@@ -12,6 +12,8 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^1.0.0",
+    "eslint": "^5.2.0",
+    "eslint-plugin-import": "^2.13.0",
     "eslint-config-nedu-base": "github:n-educatio/eslint-config-nedu-base",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.2",
@@ -19,14 +21,15 @@
     "style-loader": "^0.21.0",
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
+    "webpack-dev-server": "^3.1.5",
+    "webpack-merge": "^4.1.3",
+    "mini-css-extract-plugin": "^0.4.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.0",
+    "uglifyjs-webpack-plugin": "^1.2.7"
   },
   "scripts": {
-    "start": "webpack-dev-server --history-api-fallback --inline --progress",
+    "start": "webpack-dev-server --history-api-fallback --inline --progress --open --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
     "lint": "eslint . --fix"
-  },
-  "dependencies": {
-    "eslint": "^5.2.0",
-    "eslint-plugin-import": "^2.13.0"
   }
 }
